summative.moria.Moria.scala.error
Compilation error:
Moria:9: error: not found: value stop
    if (isFacingWall()) {stop();}
                         ^